@@ -1,6 +1,8 @@
 cpuinfo escher.cpuinfo
 majors 2.4
-kernel-2.4 kernel-image-2.4.27-2-smp
+kernel-2.4 \
+  kernel-image-2.4.27-2-smp \
+  kernel-image-2.4.27-2-generic
 numcpus 2
 usable \
   kernel-image-2.4.26-1-generic \
