@@ -1,16 +1,18 @@
 cpuinfo cittagazze.cpuinfo
 majors 2.6
 flavour amd64-k8
-kernel-2.6 kernel-image-2.6-amd64-k8
+kernel-2.6 \
+  linux-image-2.6-amd64-k8 \
+  linux-image-2.6-amd64-generic
 usable \
-  kernel-image-2.6-amd64-generic \
-  kernel-image-2.6-amd64-k8 \
-  kernel-image-2.6-amd64-k8-smp \
-  kernel-image-2.6.8-9-amd64-generic \
-  kernel-image-2.6.8-9-amd64-k8 \
-  kernel-image-2.6.8-9-amd64-k8-smp
+  linux-image-2.6-amd64-generic \
+  linux-image-2.6-amd64-k8 \
+  linux-image-2.6-amd64-k8-smp \
+  linux-image-2.6.8-9-amd64-generic \
+  linux-image-2.6.8-9-amd64-k8 \
+  linux-image-2.6.8-9-amd64-k8-smp
 unusable \
-  kernel-image-2.6-em64t-p4 \
-  kernel-image-2.6-em64t-p4-smp \
-  kernel-image-2.6.8-9-em64t-p4 \
-  kernel-image-2.6.8-9-em64t-p4-smp
+  linux-image-2.6-em64t-p4 \
+  linux-image-2.6-em64t-p4-smp \
+  linux-image-2.6.8-9-em64t-p4 \
+  linux-image-2.6.8-9-em64t-p4-smp
