@@ -3,8 +3,15 @@ majors 2.4 2.6
 flavour 686
 env SPEAKUP /nonexistent
 numcpus 2
-kernel-2.4 kernel-image-2.4-686-smp
-kernel-2.6 linux-image-2.6-686-smp
+kernel-2.4 \
+  kernel-image-2.4-686-smp \
+  kernel-image-2.4-686 \
+  kernel-image-2.4-586tsc \
+  kernel-image-2.4-386
+kernel-2.6 \
+  linux-image-2.6-686-smp \
+  linux-image-2.6-686 \
+  linux-image-2.6-386
 usable \
   kernel-image-2.4-386 \
   kernel-image-2.4-586tsc \
