@@ -2,8 +2,13 @@ cpuinfo pentium-3.cpuinfo
 majors 2.4 2.6
 flavour 686
 env SPEAKUP /nonexistent
-kernel-2.4 kernel-image-2.4-686
-kernel-2.6 linux-image-2.6-686
+kernel-2.4 \
+  kernel-image-2.4-686 \
+  kernel-image-2.4-586tsc \
+  kernel-image-2.4-386
+kernel-2.6 \
+  linux-image-2.6-686 \
+  linux-image-2.6-386
 usable \
   kernel-image-2.4-386 \
   kernel-image-2.4-586tsc \
