@@ -3,8 +3,11 @@ machine i586
 majors 2.4 2.6
 flavour 586tsc
 env SPEAKUP /nonexistent
-kernel-2.4 kernel-image-2.4-586tsc
-kernel-2.6 linux-image-2.6-386
+kernel-2.4 \
+  kernel-image-2.4-586tsc \
+  kernel-image-2.4-386
+kernel-2.6 \
+  linux-image-2.6-386
 usable \
   kernel-image-2.4-386 \
   kernel-image-2.4-586tsc \
