@@ -2,7 +2,7 @@
 set -e
 
 if [ -z "$1" ]; then
-	echo "Usage: runtest <architecture>" >&2
+	echo "Usage: runtests <architecture>" >&2
 	exit 1
 fi
 
